Rework interfaces LuceneRepository and ProductAnalyzerService. - Change returns from Streamable to Iterable (reason: lazy streams don't trigger hooks); - Change return from List to Iterable; - Change result collector from toUnmodifiableList to toList;